--- a/src/templates/default.html
+++ b/src/templates/default.html
@@ -27,6 +27,7 @@
 		<!--
 		<a href="generative_art.html">Generative Art & Design</a><br/>
 		-->
+		<a href="cellular.html">Cellular systems</a><br/>
 		
 	</div>
 	<div class="section">{{{body}}}</div>
