--- a/src/templates/default.html
+++ b/src/templates/default.html
@@ -17,28 +17,15 @@
 <div id="wrapper">
 	
 	<div class="header">
-		<h1>GCT 753</h1>
+		<h1>GCT 633</h1>
 		<a href="index.html">Overview</a><br/>
-		<a href="software.html">Software</a><br/>
-		<a href="lua.html">Lua Tutorial</a><br/>
-		&gt;&gt; <a href="https://github.com/grrrwaaa/gct753">GitHub</a><br/>
-		&gt;&gt; <a href="http://grrrwaaa.github.com/gct753/docs/reference.html">Reference</a><br/>
-		<br>
-		<a href="introduction.html">Themes</a><br/>
-		<a href="artificial_life.html">Artificial Life</a><br/>
-		<a href="generative_art.html">Generative Art</a><br/>
-		<a href="cellular.html">Cellular Systems</a><br/>
-		<a href="agent.html">Agent Systems</a><br/>
-		<a href="symbol.html">Symbol Systems</a><br/>
-		<a href="evolutionary.html">Evolutionary Systems</a><br/>
 		
 	</div>
 	<div class="section">{{{body}}}</div>
 	
 	<div class="footer">
-	<img src="img/snake6_small.jpg" alt="Artificial Natures"><br/>
+	<img src="img/snake6_small.jpg" alt="Graham Wakefield"><br/>
 	Graham Wakefield, 2013</div>
-	
 </div>
 </body>
 </html>
