--- a/src/templates/default.html
+++ b/src/templates/default.html
@@ -19,6 +19,7 @@
 	<div class="header">
 		<h1>GCT 633</h1>
 		<a href="index.html">Overview</a><br/>
+		<a href="http://github.com/grrrwaaa/gct633">&gt;&gt; GitHub</a><br/>
 		
 	</div>
 	<div class="section">{{{body}}}</div>
